Java-Runtime-Compiler#91: degrade gracefully on strong encapsulation
Runtime compilation already works on JDK 17/21 without
--add-opens because MyJavaFileManager bypasses setAccessible via the
Unsafe 'override' field offset. This hardens the fallback: when making the
delegate's internal listLocationsForModules/inferModuleName accessible throws
(e.g. InaccessibleObjectException on a future JDK that removes the Unsafe
path), the helper now returns a neutral default (empty module list / null)
instead of failing the whole compilation. Single-class compilation against the
application class path does not need module-location resolution, so the library
keeps working without encapsulation flags. The Java 8 path is unchanged.

invokeNamedMethodIfAvailable now takes the caller's default; the two tests that
reflect it are updated to the new signature, and the missing-method test now
asserts the default is returned rather than an exception thrown. Adds
compilesAndLoadsClassWithoutEncapsulationFlags as a guard that runtime compile
and load succeed with no --add-opens configured.

Verified on JDK 21 (full suite, 45 tests green); 17/25 not available here.

Refs #91

Co-Authored-By: Claude Opus 4.8 <noreply@noreply.anthropic.com>